<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="@string/choice"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sw"
        android:text="@string/st"
        android:checked="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:text="@string/choice2"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        />
    <Button
        android:id="@+id/re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rGroup1"
        android:visibility="invisible"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version1"
            android:id="@+id/rBtn1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version2"
            android:id="@+id/rBtn2"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version3"
            android:id="@+id/rBtn3"
            />
    </RadioGroup>

    <ImageView
        android:id="@+id/verImg"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:visibility="invisible"
        />



</LinearLayout>
